--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -37,8 +37,9 @@
 				<li>@Html.ActionLink(Pages.Forwarders, MVC.User.Index(RoleType.Forwarder))</li>
 				<li>@Html.ActionLink(Pages.Senders, MVC.User.Index(RoleType.Sender))</li>
 			</ul>
-		</li>
+		</li>	
 		<li>@Html.ActionLink(Pages.Calculation, MVC.Calculation.Index())</li>
+		<li>@Html.ActionLink(Pages.States, MVC.State.Index())</li>
 	}
 }
 
