--- a/Alicargo/Content/app/entity.css
+++ b/Alicargo/Content/app/entity.css
@@ -136,11 +136,27 @@
 	margin-bottom: 10px;
 }
 
-.row .span12 label {
+/*.row .span12 label {
 	display: block;
 }
-
+	*/
 .row .span12 input {
 	display: block;
 	width: 1156px;
+}
+
+.state-edit textarea {
+	width: 1156px;
+	height: 300px;
+}
+
+.state-edit-checkbox label {
+	display: inline-block;
+	margin-right: 5px;
+}
+
+.state-edit-checkbox input.check-box {
+	display: inline-block;
+	width: auto;
+	margin-bottom: 5px;
 }
