--- a/Alicargo/Views/State/Edit.cshtml
+++ b/Alicargo/Views/State/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
-@model StateEditModel
+@model Alicargo.ViewModels.State.StateEditModel
 <h1>
 	@Pages.StateEdit
 </h1>
