--- a/Alicargo/Views/State/EditorTemplates/StateEditModel.cshtml
+++ b/Alicargo/Views/State/EditorTemplates/StateEditModel.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
-@model StateEditModel
+@model Alicargo.ViewModels.State.StateEditModel
 
 <div class="state-edit">
 	@Html.HiddenFor(x => x.Id)
