--- a/Alicargo/Views/ApplicationList/SenderTemplate.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderTemplate.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.MvcHelpers.Extensions
-@using Resources
+﻿@using Resources
 @inherits BaseWebViewPage<ApplicationIndexModel>
 
 @helper EditButton()
