--- a/Alicargo/Views/User/Index.cshtml
+++ b/Alicargo/Views/User/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Alicargo.Contracts.Enums
 @using Resources
-@model Alicargo.Contracts.Enums.RoleType
+@model RoleType
 <style>
 	.container {
 		padding: 0 20px;
