--- a/Alicargo/Content/app/entity.css
+++ b/Alicargo/Content/app/entity.css
@@ -154,13 +154,39 @@
 	margin-top: 30px;
 }
 
-.state-edit-checkbox label {
-	display: inline-block;
-	margin-right: 5px;
+	.state-edit-checkbox label {
+		display: inline-block;
+		margin-right: 5px;
+	}
+
+	.state-edit-checkbox input.check-box {
+		display: inline-block;
+		width: auto;
+		margin-bottom: 5px;
+	}
+
+.state-edit-settings table {
+	margin-bottom: 20px;
 }
 
-.state-edit-checkbox input.check-box {
+.state-edit-settings td {
+	border-bottom: 1px gray solid;
+	text-align: center;
+}
+
+	.state-edit-settings td.title {
+		text-align: left;
+		font-weight: bold;
+		padding: 0 10px;
+	}
+
+.state-edit-settings label {
+	display: inline-block;
+	margin: 0;
+}
+
+.state-edit-settings input {
 	display: inline-block;
 	width: auto;
-	margin-bottom: 5px;
+	margin: 0;
 }
