--- a/Alicargo/Views/EmailTemplate/EditorTemplates/EmailTemplateModel.cshtml
+++ b/Alicargo/Views/EmailTemplate/EditorTemplates/EmailTemplateModel.cshtml
@@ -1,23 +1,21 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @model EmailTemplateModel
 
-<div>
-	@Html.HiddenFor(x => x.Id)
-	<div class="row">
-		<div class="span4">
-			@Html.LabelFor(x => x.Language)
-			@Html.DropDownListFor(x => x.Language, (IDictionary<string, string>)ViewBag.Languages)
-		</div>
-		<div class="span4">
-			<div class="state-edit-checkbox">
-				@Html.EditorWithLabelFor(x => x.EnableEmailSend)
-			</div>
+@Html.HiddenFor(x => x.EventType)
+<div class="row">
+	<div class="span4">
+		@Html.LabelFor(x => x.Language)
+		@Html.DropDownListFor(x => x.Language, (IDictionary<string, string>)ViewBag.Languages)
+	</div>
+	<div class="span4">
+		<div class="state-edit-checkbox">
+			@Html.EditorWithLabelFor(x => x.EnableEmailSend)
 		</div>
 	</div>
-	<div class="row">
-		<div class="span12">
-			@Html.EditorWithLabelFor(model => model.Subject)
-			@Html.EditorWithLabelFor(model => model.Body)
-		</div>
+</div>
+<div class="row">
+	<div class="span12">
+		@Html.EditorWithLabelFor(model => model.Subject)
+		@Html.EditorWithLabelFor(model => model.Body)
 	</div>
 </div>
