--- a/Alicargo/Views/StateSettings/Index.cshtml
+++ b/Alicargo/Views/StateSettings/Index.cshtml
@@ -2,7 +2,7 @@
 @using Resources
 @model Alicargo.ViewModels.State.StateSettingsModel
 
-<div class="state-edit-settings">
+<div class="template-edit-settings">
 	<b>
 		@ViewBag.StateName
 	</b>
