--- a/Alicargo/Views/EmailTemplate/EditorTemplates/ApplicationEventTemplateModel.cshtml
+++ b/Alicargo/Views/EmailTemplate/EditorTemplates/ApplicationEventTemplateModel.cshtml
@@ -5,21 +5,22 @@
 
 @Html.HiddenFor(x => x.EventType)
 <div class="row">
-	<div class="span12 state-edit-settings">
+	<div class="span12 template-edit-settings">
 		<p>
 			<b>
 				@Pages.StateSettings_Recipients:
 			</b>
-			@Html.LabelFor(x => x.Settings.Admin, Enums.Admin)
+			
 			@Html.CheckBoxFor(x => x.Settings.Admin)
-			@Html.LabelFor(x => x.Settings.Sender, Enums.Sender)
+			@Html.LabelFor(x => x.Settings.Admin, Enums.Admin)
 			@Html.CheckBoxFor(x => x.Settings.Sender)
-			@Html.LabelFor(x => x.Settings.Broker, Enums.Broker)
+			@Html.LabelFor(x => x.Settings.Sender, Enums.Sender)
 			@Html.CheckBoxFor(x => x.Settings.Broker)
-			@Html.LabelFor(x => x.Settings.Forwarder, Enums.Forwarder)
+			@Html.LabelFor(x => x.Settings.Broker, Enums.Broker)
 			@Html.CheckBoxFor(x => x.Settings.Forwarder)
-			@Html.LabelFor(x => x.Settings.Client, Enums.Client)
+			@Html.LabelFor(x => x.Settings.Forwarder, Enums.Forwarder)
 			@Html.CheckBoxFor(x => x.Settings.Client)
+			@Html.LabelFor(x => x.Settings.Client, Enums.Client)
 		</p>
 	</div>
 </div>
