--- a/Alicargo/Views/EmailTemplate/Index.cshtml
+++ b/Alicargo/Views/EmailTemplate/Index.cshtml
@@ -6,7 +6,7 @@
 	}
 </style>
 <p>
-	<b>@Pages.Templates</b>
+	<b>@Pages.EventTemplates</b>
 </p>
 <div id="templates-grid" class="grid"></div>
 @section scripts
