--- a/Alicargo/Views/EmailTemplate/Edit.cshtml
+++ b/Alicargo/Views/EmailTemplate/Edit.cshtml
@@ -4,7 +4,7 @@
 @model Alicargo.ViewModels.EmailTemplate.ApplicationEventTemplateModel
 <p>
 	<b>
-		@Pages.StateEdit - @Model.EventType.ToLocalString()
+		@Pages.Event - @Model.EventType.ToLocalString()
 	</b>
 </p>
 @Html.EditPage(Url.Action(MVC.EmailTemplate.Edit()), Pages.Save)
