--- a/Alicargo/Views/EmailTemplate/Edit.cshtml
+++ b/Alicargo/Views/EmailTemplate/Edit.cshtml
@@ -3,6 +3,7 @@
 @using Resources
 @model Alicargo.ViewModels.EmailTemplate.ApplicationEventTemplateModel
 <p>
+	@Html.ActionLink(Pages.Help, MVC.EmailTemplate.Help(), new { @class = "pull-right", target = "balnk" })
 	<b>
 		@Pages.Event - @Model.EventType.ToLocalString()
 	</b>
