added city dictionary

--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -41,6 +41,7 @@
 			<ul class="dropdown-menu">
 				<li>@Html.ActionLink(Pages.States, MVC.State.Index())</li>
 				<li>@Html.ActionLink(Pages.Templates, MVC.EmailTemplate.Index())</li>
+				<li>@Html.ActionLink(Pages.Cities, MVC.City.Index())</li>
 			</ul>
 		</li>
 	}
