--- a/Alicargo/Views/City/Edit.cshtml
+++ b/Alicargo/Views/City/Edit.cshtml
@@ -2,5 +2,5 @@
 @using Resources
 @model CityEditModel
 
-<h1>@Pages.Edit</h1>
+<h1>@Pages.Edit @Pages.City</h1>
 @Html.EditPage(Url.Action(MVC.City.Edit()), Pages.Save)
