--- a/Alicargo/Views/City/Index.cshtml
+++ b/Alicargo/Views/City/Index.cshtml
@@ -7,6 +7,7 @@
 </style>
 <p>
 	<b>@Pages.Cities</b>
+	@Html.ActionLink(Pages.Add, MVC.City.Create())
 </p>
 <div id="city-grid" class="grid"></div>
 @section scripts
