--- a/Alicargo/Views/City/EditorTemplates/CityEditModel.cshtml
+++ b/Alicargo/Views/City/EditorTemplates/CityEditModel.cshtml
@@ -1,2 +1,11 @@
-﻿@model CityEditModel
+﻿@using Alicargo.MvcHelpers.Extensions
+@model CityEditModel
 
+<div class="row">
+	<div class="span4">
+		@Html.EditorWithLabelFor(x => x.EnglishName)
+	</div>
+	<div class="span4">
+		@Html.EditorWithLabelFor(x => x.RussianName)
+	</div>
+</div>
