--- a/Alicargo/Views/City/EditorTemplates/CityEditModel.cshtml
+++ b/Alicargo/Views/City/EditorTemplates/CityEditModel.cshtml
@@ -8,4 +8,7 @@
 	<div class="span4">
 		@Html.EditorWithLabelFor(x => x.RussianName)
 	</div>
+	<div class="span4">
+		@Html.EditorWithLabelFor(x => x.Position)
+	</div>
 </div>
