--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -34,7 +34,7 @@
 </div>
 <div class="row">
 	<div class="span4">
-		<label for="@Html.IdFor(x => x.Volume)">@Entities.Volume (m<span class="super">3</span>)</label>
+		<label for="@Html.IdFor(x => x.Volume)">@Entities.Volume (m<span class="super">3</span>&nbsp;)</label>
 		@Html.EditorFor(model => model.Volume)
 	</div>
 	<div class="span4">
