--- a/Alicargo/Content/app/kendo.css
+++ b/Alicargo/Content/app/kendo.css
@@ -2,6 +2,18 @@
 	width: 827px;
 }
 
+.k-upload-button {
+	width: auto;
+}
+
+.k-upload-status {
+	top: 5px;
+}
+
+	.k-upload-status .k-button {
+		line-height: 0.7em;
+	}
+
 .k-edit-form-container {
 	width: auto;
 }
