--- a/Alicargo/Views/Files/Application.cshtml
+++ b/Alicargo/Views/Files/Application.cshtml
@@ -1,5 +1,9 @@
 ﻿@using Alicargo.Contracts.Enums
+@using Resources
 
+<h1>
+	@Pages.Application @ViewBag.ApplicationId
+</h1>
 <div class="row">
 	<div class="span4">
 		@Html.Partial("FilesHolder", ApplicationFileType.Invoice)
@@ -23,6 +27,9 @@
 		@Html.Partial("FilesHolder", ApplicationFileType.Torg12)
 	</div>
 </div>
+<p>
+	<a href="@Url.Action(MVC.Application.Edit((long)ViewBag.ApplicationId))" class="btn btn-primary">@Pages.ApplicationEdit</a>
+</p>
 
 @section scripts
 {
