--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -21,11 +21,11 @@
 		<li>FactoryName - Фабрика</li>
 		<li>MarkName - Марка</li>
 		<li>Invoice - Инвойс</li>
-		<li>InvoiceFileName - Название файла инвойса</li>
-		<li>PackingFileName - Название файла пакинга</li>
-		<li>SwiftFileName - Название файла SWIFT</li>
-		<li>DeliveryBillFileName - Название файла Счет за доставку</li>
-		<li>Torg12FileName -  Название файла  ТОРГ12</li>
+		<li>InvoiceFiles - Название файла инвойса</li>
+		<li>PackingFiles - Название файла пакинга</li>
+		<li>SwiftFiles - Название файла SWIFT</li>
+		<li>DeliveryBillFiles - Название файла Счет за доставку</li>
+		<li>Torg12Files -  Название файла  ТОРГ12</li>
 		<li>DateOfCargoReceipt - Дата получения груза</li>
 		<li>TransitReference - Транзитный референс</li>
 		<li>TransitCarrierName - Перевозчик</li>
