files for sender

--- a/Alicargo/Views/SenderApplication/Edit.cshtml
+++ b/Alicargo/Views/SenderApplication/Edit.cshtml
@@ -7,4 +7,5 @@
 	@Pages.ApplicationEdit @ViewBag.ApplicationNumber
 	<span>@Entities.Nic: @ViewBag.Nic</span>
 </h1>
-@Html.EditPage(Url.Action(MVC.SenderApplication.Edit()), Pages.Save)
+@Html.EditPage(Url.Action(MVC.SenderApplication.Edit()), Pages.Save,
+	Html.ActionLink(Pages.Files, MVC.Files.SenderApplication((long)ViewBag.ApplicationId), new { @class = "btn btn-info" }))
