--- a/Alicargo/Views/Application/Edit.cshtml
+++ b/Alicargo/Views/Application/Edit.cshtml
@@ -7,4 +7,4 @@
 	<span>@Entities.Nic: @Html.ViewBag.ClientNic</span>
 </h1>
 @Html.EditPage(Url.Action(MVC.Application.Edit()), Pages.Update,
-	Html.ActionLink(Pages.Files, MVC.Files.Application((long) ViewBag.ApplicationId), new {@class = "btn btn-info"}))
+	Html.ActionLink(Pages.Files, MVC.Files.AdminApplication((long) ViewBag.ApplicationId), new {@class = "btn btn-info"}))
