--- a/Alicargo/Views/Files/FilesHolder.cshtml
+++ b/Alicargo/Views/Files/FilesHolder.cshtml
@@ -1,8 +1,7 @@
 ﻿@using Alicargo.Contracts.Enums
-@using Alicargo.Core.Localization
 @model ApplicationFileType
 
+<b>@Alicargo.Core.Resources.ApplicationFileType.ResourceManager.GetString(Model.ToString())</b>
 <div data-type="@Model" data-app-id="@ViewBag.ApplicationId" class="files-holder">
-	<b>@Model.ToLocalString()</b>
 	<input id="@Model" name="file" type="file" />
 </div>
