fixed jobs and added UploadedFile

--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -55,5 +55,6 @@
 		<li>AirWaybillDateOfDeparture - Дата вылета</li>
 		<li>AirWaybillDateOfArrival - Дата прилета</li>
 		<li>AirWaybillGTD - ГТД</li>
+		<li>UploadedFile - Загруженный файл</li>
 	</ul>
 </p>
