--- a/Alicargo/Views/AirWaybill/Index.cshtml
+++ b/Alicargo/Views/AirWaybill/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.Contracts.Enums
+@using Alicargo.MvcHelpers.BundleHelpres
 @using Resources
 @inherits BaseWebViewPage
 <style>
@@ -36,5 +37,5 @@ else if (IdentityService.IsInRole(RoleType.Sender))
 			@Html.Partial("AdminDetails")
 		}
 	</script>
-	@Scripts.Render(PathConstants.AwbListJs)
+	@Scripts.Render(JsPaths.AwbListJs)
 }
