--- a/Alicargo/Views/ApplicationList/Index.cshtml
+++ b/Alicargo/Views/ApplicationList/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.Contracts.Enums
+@using Alicargo.MvcHelpers.BundleHelpres
 @inherits BaseWebViewPage<ApplicationIndexModel>
 
 <style>
@@ -27,5 +28,5 @@
 
 @section scripts
 {
-	@Scripts.Render(PathConstants.ApplicationListJs)
+	@Scripts.Render(JsPaths.ApplicationListJs)
 }
