--- a/Alicargo/Views/City/Index.cshtml
+++ b/Alicargo/Views/City/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Resources
+﻿@using Alicargo.MvcHelpers.BundleHelpres
+@using Resources
 <style>
 	.container {
 		padding: 0 20px;
@@ -12,5 +13,5 @@
 <div id="city-grid" class="grid"></div>
 @section scripts
 {
-	@Scripts.Render(PathConstants.CityListJs)
+	@Scripts.Render(JsPaths.CityListJs)
 }
