--- a/Alicargo/Views/Client/Index.cshtml
+++ b/Alicargo/Views/Client/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Resources
+﻿@using Alicargo.MvcHelpers.BundleHelpres
+@using Resources
 <style>
 	.container {
 		padding: 0 20px;
@@ -11,5 +12,5 @@
 <div id="client-grid" class="grid"></div>
 @section scripts
 {
-	@Scripts.Render(PathConstants.ClientListJs)
+	@Scripts.Render(JsPaths.ClientListJs)
 }
