--- a/Alicargo/Views/ClientCalculation/Index.cshtml
+++ b/Alicargo/Views/ClientCalculation/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Resources
+﻿@using Alicargo.MvcHelpers.BundleHelpres
+@using Resources
 @inherits BaseWebViewPage
 <style>
 	.container {
@@ -13,5 +14,5 @@
 
 @section scripts
 {
-	@Scripts.Render(PathConstants.ClientCalculationJs)	
+	@Scripts.Render(JsPaths.ClientCalculationJs)	
 }
