--- a/Alicargo/Views/EmailTemplate/Index.cshtml
+++ b/Alicargo/Views/EmailTemplate/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Resources
+﻿@using Alicargo.MvcHelpers.BundleHelpres
+@using Resources
 <style>
 	.container {
 		padding: 0 20px;
@@ -11,5 +12,5 @@
 <div id="templates-grid" class="grid"></div>
 @section scripts
 {
-	@Scripts.Render(PathConstants.TemplateListJs)
+	@Scripts.Render(JsPaths.TemplateListJs)
 }
