--- a/Alicargo/Views/Files/AdminApplication.cshtml
+++ b/Alicargo/Views/Files/AdminApplication.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.Contracts.Enums
+@using Alicargo.MvcHelpers.BundleHelpres
 @using Resources
 
 <h1>
@@ -33,5 +34,5 @@
 
 @section scripts
 {
-	@Scripts.Render(PathConstants.FilesJs)
+	@Scripts.Render(JsPaths.FilesJs)
 }
