--- a/Alicargo/Views/SenderCalculation/Index.cshtml
+++ b/Alicargo/Views/SenderCalculation/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Resources
+﻿@using Alicargo.MvcHelpers.BundleHelpres
+@using Resources
 @inherits BaseWebViewPage
 <style>
 	.container {
@@ -16,5 +17,5 @@
 	<script type="text/x-kendo-template" id="calculation-grid-details-template">
         @Html.Partial("Details")
 	</script>
-	@Scripts.Render(PathConstants.SenderCalculationJs)	
+	@Scripts.Render(JsPaths.SenderCalculationJs)	
 }
