--- a/Alicargo/Views/Shared/DynamicScripts.cshtml
+++ b/Alicargo/Views/Shared/DynamicScripts.cshtml
@@ -1,4 +1,5 @@
-﻿@Scripts.Render(Url.Action(MVC.DynamicScript.Roles()))
+﻿@using Alicargo
+@Scripts.Render(Url.Action(MVC.DynamicScript.Roles()))
 @Scripts.Render(Url.Action(MVC.DynamicScript.Localization()))
-@Scripts.RenderFormat("<script src=\"{0}?v=" + PathConstants.Version + "\"></script>", Url.Action(MVC.DynamicScript.States()))
-@Scripts.RenderFormat("<script src=\"{0}?v=" + PathConstants.Version + "\"></script>", Url.Action(MVC.DynamicScript.Urls()))
+@Scripts.RenderFormat("<script src=\"{0}?v=" + MvcApplication.Version + "\"></script>", Url.Action(MVC.DynamicScript.States()))
+@Scripts.RenderFormat("<script src=\"{0}?v=" + MvcApplication.Version + "\"></script>", Url.Action(MVC.DynamicScript.Urls()))
