--- a/Alicargo/Views/Shared/_Layout.cshtml
+++ b/Alicargo/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-@using Alicargo.Contracts.Enums
+﻿@using Alicargo.Contracts.Enums
+@using Alicargo.MvcHelpers.BundleHelpres
 @using Resources
 @{
 	Layout = null;
@@ -10,15 +11,15 @@
 		<title>Alicargo</title>
 		<link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		@Styles.Render(PathConstants.StylesPath)
-		@Scripts.Render(PathConstants.CommonJs)
+		@Styles.Render(CssPaths.Common)
+		@Scripts.Render(JsPaths.CommonJs)
 		@switch (UICulture)
 		{
 			case TwoLetterISOLanguageName.Russian:
-				@Scripts.Render(PathConstants.RuJs)
+				@Scripts.Render(JsPaths.RuJs)
 				break;
 			case TwoLetterISOLanguageName.Italian:
-				@Scripts.Render(PathConstants.ItJs)
+				@Scripts.Render(JsPaths.ItJs)
 				break;
 		}
 	</head>
