--- a/Alicargo/Views/State/Edit.cshtml
+++ b/Alicargo/Views/State/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.MvcHelpers.BundleHelpres
+@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.State.StateEditModel
 <h1>
@@ -7,5 +8,5 @@
 @Html.EditPage(Url.Action(MVC.State.Edit()), Pages.Save)
 @section scripts
 {
-	@Scripts.Render(PathConstants.StateEditJs)
+	@Scripts.Render(JsPaths.StateEditJs)
 }
