--- a/Alicargo/Views/ApplicationList/ClientTemplate.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientTemplate.cshtml
@@ -5,8 +5,9 @@
 @helper EditButton()
 {
 	@:# if(StateId != @StateConfig.CargoReceivedStateId){ #
-	<a href="@Url.Action(MVC.Transit.Edit())/#= TransitId #" class="btn btn-primary">@Pages.Edit.EncodeForKendo()</a>
+	<a href="@Url.Action(MVC.ClientApplication.Edit())/#= Id #" class="btn btn-primary">@Pages.Edit.EncodeForKendo()</a>
 	@:# } #
+	<a href="@Url.Action(MVC.Files.ClientApplication())/#= Id #" class="btn btn-info">@Pages.Files</a>
 }
 
 @helper CloseButton()
