--- a/Alicargo/Views/ClientApplication/Edit.cshtml
+++ b/Alicargo/Views/ClientApplication/Edit.cshtml
@@ -5,4 +5,4 @@
 	@Pages.ApplicationEdit @ViewBag.ApplicationNumber
 </h1>
 @Html.EditPage(Url.Action(MVC.ClientApplication.Edit()), Pages.Update,
-	Html.ActionLink(Pages.Files, MVC.Files.AdminApplication((long)ViewBag.ApplicationId), new { @class = "btn btn-info" }))
+	Html.ActionLink(Pages.Files, MVC.Files.ClientApplication((long)ViewBag.ApplicationId), new { @class = "btn btn-info" }))
